# rpn-calc-fortran

./: CMakeLists.txt  CMakePresets.json  pyproject.toml
.github/workflows/: ci_cmake.yml
cmake/: compilers.cmake
src/: assert.F90  funcs.f90  hyper.f90  trig.f90  ui.f90
test/: CMakeLists.txt
